# auto_clean

./: CMakeLists.txt  black.txt  deepin-auto-clean-autostart.desktop  deepin-auto-clean@.service  main.cpp  white.txt
debian/: changelog  control
